1.0
===

- Applied Gauthier Segay's patch fixing CONTRIB-ISSUE-116
  (AspView) allow the use of .master files in the layouts viewtemplate's folder

- Added additional path support to the view engine configuration

   <viewEngine 
      viewPathRoot="views" 
      customEngine="ViewEngine.Type.Name, Assembly">

      <additionalSources>
         <assembly name="" namespace="" />
         <path location="" />         
      </additionalSources>
      
   </viewEngine>

	Breaking change; the additional assemlby sources property on FileAssemblyViewSourceLoader is now named 'AssemblySources'.
				     the paths are loaded into 'PathSources'
   
- Applied Robert Ream's patch fixing MR-438
  "FormHelper element methods "defaultValue" attribute."
  From description: This patch adds the "defaultValue" attribute to most of the FormHelper element generator methods.

- Applied Victor Kornov's patch fixing MR-448
  "Make JSONReturnBinderAttribute open for extension"

- Applied Steven Radack's patch fixing MR-449
  "Change ResourceFileHandler to add HTTP cache headers"
  Used some of Andre Loker's suggestions. Wont use Assembly CodeBase as I think that might 
  introduce security checks that are hard to deal on shared hosts

- Applied Andre Loker's patch fixing MR-453
  "FormHelper.PasswordNumberField/PasswordField: option to decide whether to fill value attribute"

- Applied Mike Nichols's patch fixing MR-455
  DefaultUrlBuilder doesn't persist route parameters when using RedirectUsingNamedRoute

- Applied Andre Loker's patch fixing MR-456
  "Routing Engine: support for root-routing + excluding MonoRail resource files from routing"

- Applied Mike Nichols's patch fixing MR-396
  Get WindsorIntegration on DynamicActionProviders.

- Applied Gildas's patch fixing MR-433 
  Support for the jQuery Validation plugin.

- Applied Fixed MR-428
  Transformation Filters didn't work in trunk

- Applied Aaron Jensen's adding call to RaiseUnhandledError when a controller fails to be created.